# template-cxx

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  justfile
bench/: bench.cpp
test/: test.cpp
